cmake_minimum_required(VERSION 3.23)
project(CSE2218-223-A)

set(CMAKE_CXX_STANDARD 17)
set(CMAKE_C_STANDARD 11)

# Assignment 1
add_executable(AssignmentOne.SolutionOne AssignmentOne/solution_1.cpp)
add_executable(AssignmentOne.SolutionTwo AssignmentOne/solution_2.cpp)

# Assignment 2
add_executable(AssignmentTwo.SolutionOne AssignmentTwo/solution_1.cpp)
add_executable(AssignmentTwo.SolutionTwo AssignmentTwo/solution_2.cpp)

# Online 1
add_executable(OnlineOne.SolutionOne OnlineOne/solution_1.cpp)
add_executable(OnlineOne.SolutionTwo OnlineOne/solution_2.cpp)

# Online 2
add_executable(OnlineTwo.SolutionOne OnlineTwo/solution.cpp)

# Ungraded Assignment
add_executable(UngradedAssignment.SolutionOne UngradedAssignment/solution_1.cpp)
add_executable(UngradedAssignment.SolutionTwo UngradedAssignment/solution_2.cpp)
add_executable(UngradedAssignment.SolutionThree UngradedAssignment/solution_3.cpp)
add_executable(UngradedAssignment.SolutionFour UngradedAssignment/solution_4.cpp)
add_executable(UngradedAssignment.SolutionFive UngradedAssignment/solution_5.cpp)
add_executable(UngradedAssignment.SolutionSix UngradedAssignment/solution_6.cpp)
add_executable(UngradedAssignment.SolutionSeven UngradedAssignment/solution_7.cpp)
add_executable(UngradedAssignment.SolutionEight UngradedAssignment/solution_8.cpp)
add_executable(UngradedAssignment.SolutionNine UngradedAssignment/solution_9.cpp)
add_executable(UngradedAssignment.SolutionTen UngradedAssignment/solution_10.cpp)
